syntax = "proto3";
package glooeeapi.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/grpcserver/api/v1";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "google/protobuf/duration.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/settings.proto";
import "github.com/solo-io/solo-kit/api/v1/ref.proto";

message OAuthEndpoint {
    string url = 1;
    string client_name = 2;
}

message GetVersionRequest {}

message GetVersionResponse {
    string version = 1;
}

message GetOAuthEndpointRequest {}

message GetOAuthEndpointResponse {
    OAuthEndpoint o_auth_endpoint = 1;
}

message GetSettingsRequest {}

message GetSettingsResponse {
    gloo.solo.io.Settings settings = 1;
}

message UpdateSettingsRequest {
    core.solo.io.ResourceRef ref = 1;
    repeated string watch_namespace_list = 2;
    google.protobuf.Duration refresh_rate = 3;
}

message UpdateSettingsResponse {
    gloo.solo.io.Settings settings = 1;
}

message GetIsLicenseValidRequest {}

message GetIsLicenseValidResponse {
    bool is_license_valid = 1;
}

message ListNamespacesRequest {}

message ListNamespacesResponse {
    repeated string namespace_list = 1;
}

service ConfigApi {
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}
    rpc GetOAuthEndpoint(GetOAuthEndpointRequest) returns (GetOAuthEndpointResponse) {}
    rpc GetIsLicenseValid(GetIsLicenseValidRequest) returns (GetIsLicenseValidResponse) {}

    rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse) {}
    rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse) {}

    rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {}
}
